# group-social-e-cards-Brittdog100

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml
cardclub/: admin.py  asgi.py  models.py  rest.py  settings.py  tests.py  urls.py  views.py  wsgi.py
cardclub/migrations/: 0001_initial.py  0002_auto_20200702_1440.py  0003_user_friends.py  0004_card_timestamp.py  0005_comment.py  0006_auto_20200706_1717.py  0007_auto_20200706_1811.py  0008_auto_20200706_1930.py  0009_auto_20200708_1837.py
