[tool.poetry]
name = "cardclub"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.8.2"
django = "^3.0.6"
django-extensions = "^2.2.9"
django-debug-toolbar = "^2.2"
werkzeug = "^1.0.1"
django-environ = "^0.4.5"
djoser = "^2.0.3"
djangorestframework = "^3.11.0"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.5"
dj-database-url = "^0.5.0"
django-heroku = "^0.3.1"
asgiref = "^3.2.10"
django-cors-headers = "^3.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
